--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>ルドルフPAD</h1>
     </header>
-    <main>
+    <main class="main">
         <div class="memo_main_box" id="memo_main_box">
             <div class="text_box">
                 <h2>目標</h2>
