--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="main">
         <div class="memo_main_box" id="memo_main_box">
             <div class="text_box">
-                <h2>目標</h2>
+                <h2>今日の目標</h2>
                 <!--プレイヤーのテキスト打ちこみエリア-->
                 <textarea id="text_area" class="text_area"> </textarea>
                 <!--ボタン類-->
