--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 <body>
     <div id="fullOverlay">
         <div class="text">
-            <p>ウマ娘PAD</p>
+            <h2>今日の目標</h2>
+            <div class="select_text">
+                <textarea id="text_area2" class="text_area2"> </textarea>
+                <div>
+                    <button class="button4" id="btn_save2" href="#">Save</button>
+                </div>
+            </div>
             <div id="mainImage">
-                <img src="img/rudorufu.png" width="300px" />
+                <img src="img/rudorufu.png" width="200px" />
             </div>
             <p>
                 どの娘にする？
@@ -46,14 +52,13 @@
                         <button class="button3" id="clear_no">ぴえん…</button>
                     </div>
                 </div>
-                <h2>返事</h2>
+                <h2>メッセージ</h2>
                 <!--ルドルフ返事-->
                 <div class="reply_box">
                     <p id="TextTyping" class="TextTyping"></p>
                 </div>
             </div>
             <div class="img_box">
-                <img src="" alt="">
                 <!--ルドルフ画像-->
                 <div class="tachi_box">
                     <img src="" alt="" class="tachi" id="tachi">
@@ -89,6 +94,22 @@
                 // マウスオーバーしている画像をメインの画像に反映
                 $("#mainImage img").attr("src", "img/mac.png");
             });
+            ////////////////////メモ内容読み込む//////////////////////////
+            if (localStorage.getItem("memo")) {
+                const jasondata = localStorage.getItem("memo");
+                const data = JSON.parse(jasondata);
+                $("#text_area2").val(data.text);
+            } else {
+            };
+            ////////////////////メモ内容読み込む//////////////////////////
+            //保存ボタン//
+            $("#btn_save2").on("click", function () {
+                const data = {
+                    text: $("#text_area2").val(),
+                };
+                const jasondata = JSON.stringify(data);
+                localStorage.setItem("memo", jasondata);
+            });
         });
         ////////////////////タイピング風テキスト//////////////////////////
         // TextTypingというクラス名がついている子要素（span）を表示から非表示にする定義
@@ -120,24 +141,6 @@
             TextTypingAnime();/* アニメーション用の関数を呼ぶ*/
         });// ここまで画面をスクロールをしたら動かしたい場合の記述
 
-        // 画面が読み込まれたらすぐに動かしたい場合の記述
-        $(window).on('load', function () {
-            //spanタグを追加する
-            var element = $(".TextTyping");
-            element.each(function () {
-                var text = $(this).html();
-                var textbox = "";
-                text.split('').forEach(function (t) {
-                    if (t !== " ") {
-                        textbox += '<span>' + t + '</span>';
-                    } else {
-                        textbox += t;
-                    }
-                });
-                $(this).html(textbox);
-            });
-            TextTypingAnime();/* アニメーション用の関数を呼ぶ*/
-        });
         // ここまで画面が読み込まれたらすぐに動かしたい場合の記述
         ////////////////////タイピング風テキスト//////////////////////////
 
